--- a/frontend/src/styles/Layout.module.css
+++ b/frontend/src/styles/Layout.module.css
@@ -62,7 +62,7 @@
     text-decoration: none;
     color: black;
     padding: 10px;
-    font-size: 10pt;
+    font-size: 11pt;
     width: 100%;
 }
 
@@ -95,6 +95,21 @@
 .linkContainer img {
     width: 20px;
     padding-left: 20px;
+}
+
+.logoContainer {
+    margin-left: 5px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.logoContainer img {
+    width: 30px;
+}
+
+.logoContainer h1 {
+    font-size: 18pt;
 }
 
 .linkContainer:hover {
