--- a/frontend/src/styles/Modal.module.css
+++ b/frontend/src/styles/Modal.module.css
@@ -22,7 +22,7 @@
     padding: 5px;
     border-radius: 6px;
     border: 1px solid black;
-    width: 200px;
+    width: 100% - 30px;
     margin-bottom: 5px;
 }
 
