--- a/frontend/src/styles/Table.module.css
+++ b/frontend/src/styles/Table.module.css
@@ -11,7 +11,9 @@
     font-size: 11pt;
     box-shadow: 0px 0px 5px;
     border-radius: 10px;
-    width: 70%;
+    border-collapse: collapse;
+    margin-bottom: 20px;
+    width: 800px;
 }
 
 .table th {
@@ -19,6 +21,7 @@
     color: white;
     padding: 12px;
     text-align: center;
+   
 }
 
 .table th:nth-child(1) {
