refact: refatoração do código

--- a/frontend/src/styles/Layout.module.css
+++ b/frontend/src/styles/Layout.module.css
@@ -114,6 +114,7 @@
 
 .linkContainer:hover {
     background-color: rgb(196, 196, 196);
-    transition: ease 500ms;
+    transition: 
+    ease 500ms;
 }
 
